--- a/LandingPage.html
+++ b/LandingPage.html
@@ -489,7 +489,7 @@ justify-items: center;
         <img id="tone" src="https://cdn-icons-png.flaticon.com/512/727/727329.png" alt="Music note picture">
         <div id="sound">
             <h1 id="amazing-sound">Amazing Sound Quality</h1>
-            <p id="text-sound">Our saxophones have an amazing quality of sound. You can play it whenever and wherever you want and we can guarantee that everybody will be surpised with the sound that your saxophone will make.</p>
+            <p id="text-sound">Our saxophones have an amazing quality of sound. You can play it whenever and wherever you want and we can guarantee that everybody will be surprised with the sound of your saxophone.</p>
         </div>
     </div>
 
