--- a/LandingPage.html
+++ b/LandingPage.html
@@ -480,7 +480,7 @@ justify-items: center;
         <img id="droplet" src="https://www.pinclipart.com/picdir/big/499-4994267_water-drop-png-yellow-drop-clipart.png " alt="Water droplet">
         <div id="waterproofness">
             <h1 id="proof">Waterproof design</h1>
-            <p id="water-text">We care about the design and it's usability for a customer, because of that we made it fully waterproof and not even a single droplet will damage your lovely saxophone.</p>
+            <p id="water-text">We care about the design and its usability for a customer, because of that we made it fully waterproof and not even a single droplet will damage your lovely saxophone.</p>
         </div>
 
     </div>
